Edit button on mobile menu dropdown

--- a/wp-content/themes/teamlab-blog-2-0/css/navigation.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/navigation.css
@@ -704,6 +704,10 @@ div.custom-select div.selector {
       align-items: center;
   }
 
+  #navitem_download_menu .dropdown-content > li > span.nowrap-link{
+    white-space: normal;
+  }
+
   .phone_wrapper{
     right: auto;
     left: 0;
