Added translations and footer and header for amp pages

--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -81,6 +81,7 @@ header {
   border-bottom: 1px solid #d9d9d9;
   position: fixed;
   z-index: 1000;
+  top: 56px;
 }
 .logo {
   width: 180px;
@@ -698,7 +699,7 @@ body.desktop .button.red.disabled:visited {
   .MainContainer{
     width: auto;
     box-sizing: border-box;
-    padding: 48px 0 80px 0;
+    padding: 96px 0 80px 0;
   }
   .pageContent{
     width: 100%;
@@ -711,27 +712,27 @@ body.desktop .button.red.disabled:visited {
     margin: auto;
     max-width: 736px;
     box-sizing: border-box;
-    padding: 88px 0 80px 0;
+    padding: 128px 0 80px 0;
   }
   .PostContainer {
     max-width: 736px;
     box-sizing: border-box;
     overflow: hidden;
-    padding: 48px 0 80px 0;
+    padding: 96px 0 80px 0;
   }
   .SingleContainer {
     max-width: 736px;
     box-sizing: border-box;
-    padding: 48px 0 80px 0;
+    padding: 96px 0 80px 0;
   }
   .ErrorContainer {
     max-width: 736px;
     overflow: hidden;
-    padding: 88px 0 80px 0;
+    padding: 136px 0 80px 0;
   }
 
   .MailContainer {
-    padding: 112px 0 80px 0;
+    padding: 160px 0 80px 0;
     max-width: 736px;
     box-sizing: border-box;
     display: flex;
@@ -856,19 +857,19 @@ body.desktop .button.red.disabled:visited {
 
 @media screen and (max-width: 768px){
   .MainContainer{
-  padding: 48px 40px 80px 40px;
+  padding: 96px 40px 80px 40px;
   }
   .SingleContainer{
     width: auto;
-    padding: 48px 40px 80px 40px;
+    padding: 96px 40px 80px 40px;
   }
   .MailContainer{
       width: auto;
-      padding: 80px 15px;
+      padding: 128px 15px;
   }
    .SearchContainer{
     width: auto;
-    padding: 88px 40px 80px 40px;
+    padding: 128px 40px 80px 40px;
    }
    .SearchContainer .sidebar .recent-post h3 {
      font-size: 24px;
@@ -879,7 +880,7 @@ body.desktop .button.red.disabled:visited {
    }
    .PostContainer {
      width: auto;
-     padding: 48px 40px 80px 40px;
+     padding: 96px 40px 80px 40px;
      margin: 0;
    }
    #post-content .content .entry-title {
@@ -1066,7 +1067,7 @@ body.desktop .button.red.disabled:visited {
 @media screen and (max-width: 592px){
 
   .MainContainer{
-    padding: 48px 0 64px 0;
+    padding: 96px 0 64px 0;
   }
   .wrapperMain{
     display: block;
@@ -1081,11 +1082,11 @@ body.desktop .button.red.disabled:visited {
     padding-bottom: 56px;
   }
  .SingleContainer{
-    padding: 48px 0;
+    padding: 96px 0;
     width: 100%;
   }
   .PostContainer {
-    padding: 48px 0 60px;
+    padding: 96px 0 60px;
   }
    .PostContainer .content img{
      height: 100%;
@@ -1102,7 +1103,7 @@ body.desktop .button.red.disabled:visited {
     }
     .SearchContainer{
     width: auto;
-    padding: 88px 0 48px;
+    padding: 128px 0 48px;
    } 
    .PostContainer #post-content .sidebar .wrapperMain .postwrapper:last-child,
    .SearchContainer #content .sidebar .recent-post .wrapperMain .postwrapper:last-child {
@@ -1119,7 +1120,7 @@ body.desktop .button.red.disabled:visited {
      margin-bottom: 48px;
    }
   .MailContainer{
-      padding: 80px 15px 40px;
+      padding: 128px 15px 40px;
   }
   .search-main{
     padding: 0 15px;
@@ -1147,7 +1148,7 @@ body.desktop .button.red.disabled:visited {
 }
   .ErrorContainer {
     width:  auto;
-    padding: 88px 16px 64px;
+    padding: 136px 16px 64px;
   }
   .ErrorContainer .bg{
     height: 235px;
@@ -1307,7 +1308,7 @@ body.desktop .button.red.disabled:visited {
 }
 @media screen and (max-width: 320px){
   .PostContainer {
-    padding: 48px 0 20px 0;
+    padding: 96px 0 20px 0;
     margin: 0;
   }
   #post-content .post {
