Added css for figure tag

--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -388,7 +388,8 @@
     height: calc(100vw * 0.12);
     object-fit: cover;
 }
-.content img{
+.content img,
+.content figure{
     object-fit: contain;
     max-width: 100%;
     margin: 16px 0;
