Changed sizes buttons for download mobile app

--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -1272,6 +1272,10 @@ body.desktop .button.red.disabled:visited {
   div.post div.entry-utility span.googleplus-button{
     display: none;
   }
+
+  .content .button{
+    padding: 16px 20px;
+  }
 }
 @media screen and (max-width: 549px) {
   .ListSocLink {
