--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -972,12 +972,13 @@ body.desktop .button.red.disabled:visited {
     margin-bottom: 0;
 }
   #navitem_footer_features,
-  #navitem_footer_integration,
   #navitem_footer_solutions,
   #navitem_footer_support,
   #navitem_footer_developers,
   #navitem_footer_GetInfo,
-  #navitem_footer_contact {
+  #navitem_footer_contact,
+  #navitem_footer_by_size,
+  #navitem_footer_by_industry {
     display: none;
     transition: max-height 0.2s ease-in-out, visibility 0.2s ease-in-out;
   }
