--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -1755,6 +1755,99 @@ a.download:active{
     border: 1px solid #FF6F3D;
 }
 
+.wp-polls-form ul li:before,
+.wp-polls ul li:before{
+    content: none;
+}
+
+.wp-polls .pollbar{
+    box-sizing: border-box;
+}
+
+.wp-polls-ul{
+    margin: 0px 0px 10px 0;
+}
+
+.wp-polls-form input[type="radio"]{
+    vertical-align: baseline;
+}
+
+.wp-polls-form .vote input[type="button"],
+.wp-polls-form .result a{
+    background-color: transparent;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 133%;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-decoration: none;
+    width: 200px;
+}
+
+.wp-polls-form .result a{
+    display: block;
+}
+.wp-polls-form .vote{
+    margin-right: 45px;
+}
+
+/* для элемента input c type="radio" */
+.wp-polls-form .custom-radio {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+  /* для элемента label связанного с .custom-radio */
+.wp-polls-form .custom-radio+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+  /* создание в label псевдоэлемента  before со следующими стилями */
+.wp-polls-form  .custom-radio+label::before {
+    content: '';
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #AAAAAA;
+    background-color: #F9F9F9;
+    border-radius: 50%;
+    margin-right: 8px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    font-size: 16px;
+    line-height: 160%;
+}
+  /* стили при наведении курсора на радио */
+.wp-polls-form  .custom-radio:not(:disabled):not(:checked)+label:hover::before {
+    border-color: #666666;
+}
+  /* стили для активной радиокнопки (при нажатии на неё) */
+.wp-polls-form .custom-radio:not(:disabled):active+label::before {
+    background-color: #F9F9F9;
+    border-color: #666666;
+}
+
+  /* стили для радиокнопки, находящейся в фокусе и не находящейся в состоянии checked */
+.wp-polls-form .custom-radio:focus:not(:checked)+label::before {
+    border-color: #80bdff;
+}
+  /* стили для радиокнопки, находящейся в состоянии checked */
+.wp-polls-form .custom-radio:checked+label::before {
+    border-color: #8BB825;
+    background-color: #8BB825;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+}
+  /* стили для радиокнопки, находящейся в состоянии disabled */
+.wp-polls-form .custom-radio:disabled+label::before {
+    border-color: #F5F5F5;
+    background-color: #E5E5E5;
+}
+
 
 /*-----------Share button--------*/
 .a2a_kit{
